--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "agent/index.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "frida-compile agent/index.ts -o _agent.js -c",
-    "watch": "frida-compile agent/index.ts -o _agent.js -w"
+    "build": "frida-compile src/init-agent-script.ts -o src/init-agent-script.js -c",
+    "watch": "frida-compile src/init-agent-script.ts -o src/init-agent-script.js -w",
+    "build:agent": "frida-compile agent/index.ts -o _agent.js -c",
+    "watch:agent": "frida-compile agent/index.ts -o _agent.js -w"
   },
   "devDependencies": {
     "@types/frida-gum": "^18.5.1",
