--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "watch:xp": "frida-compile agent/xp-3.9.2.23.ts -o agent/xp-3.9.2.23.js -w",
     "start:xp": "frida -l agent/xp-3.9.2.23.js WeChat.exe",
     "watch:xp:3.9.9.43": "frida-compile agent/xp-3.9.9.43.ts -o agent/xp-3.9.9.43.js -w",
-    "start:xp:3.9.9.43": "frida -l agent/xp-3.9.9.43.js WeChat.exe"
-    
+    "start:xp:3.9.9.43": "frida -l agent/xp-3.9.9.43.js WeChat.exe",
+    "watch:xp:3.9.10.19": "frida-compile agent/xp-3.9.10.19.ts -o agent/xp-3.9.10.19.js -w",
+    "start:xp:3.9.10.19": "frida -l agent/xp-3.9.10.19.js WeChat.exe"
   },
   "devDependencies": {
     "@types/frida-gum": "^18.5.1",
