--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "watch:xp:3.9.9.43": "frida-compile agent/xp-3.9.9.43.ts -o agent/xp-3.9.9.43.js -w",
     "start:xp:3.9.9.43": "frida -l agent/xp-3.9.9.43.js WeChat.exe",
     "watch:xp:3.9.10.19": "frida-compile agent/xp-3.9.10.19.ts -o agent/xp-3.9.10.19.js -w",
-    "start:xp:3.9.10.19": "frida -l agent/xp-3.9.10.19.js WeChat.exe"
+    "start:xp:3.9.10.19": "frida -l agent/xp-3.9.10.19.js WeChat.exe",
+    "watch:http:3.9.10.19": "frida-compile agent/http.ts -o agent/http.js -w",
+    "start:http:3.9.10.19": "frida -l agent/http.js WeChat.exe"
   },
   "devDependencies": {
     "@types/frida-gum": "^18.5.1",
     "@types/node": "^18.19.3",
     "frida-compile": "^16.4.1"
+  },
+  "dependencies": {
+    "ws": "^8.17.0"
   }
 }
