--- a/package.json
+++ b/package.json
@@ -11,16 +11,15 @@
     "start": "frida -l agent/_agent.js WeChat.exe",
     "watch:xp": "frida-compile agent/xp-3.9.2.23.ts -o agent/xp-3.9.2.23.js -w",
     "start:xp": "frida -l agent/xp-3.9.2.23.js WeChat.exe",
-    "watch:xp:3.9.9.43": "frida-compile agent/xp-3.9.9.43.ts -o agent/xp-3.9.9.43.js -w",
-    "start:xp:3.9.9.43": "frida -l agent/xp-3.9.9.43.js WeChat.exe",
     "watch:xp:3.9.10.19": "frida-compile agent/xp-3.9.10.19.ts -o agent/xp-3.9.10.19.js -w",
     "start:xp:3.9.10.19": "frida -l agent/xp-3.9.10.19.js WeChat.exe",
     "watch:http": "frida-compile agent/http.ts -o agent/http.js -w",
     "start:http": "frida -l agent/http.js WeChat.exe",
-    "watch:koa": "frida-compile agent/koa.ts -o agent/koa.js -w",
-    "start:koa": "frida -l agent/koa.js WeChat.exe",
     "watch:lite": "frida-compile agent/xp-3.9.10.27-lite.ts -o agent/xp-3.9.10.27-lite.js -w",
     "start:lite": "frida -l agent/xp-3.9.10.27-lite.js WeChat.exe",
+    "build:lite": "frida-compile agent/xp-3.9.10.27-lite.ts -o dist/xp-3.9.10.27-lite.js -c",
+    "watch:dev": "frida-compile agent/dev.ts -o agent/dev.js -w",
+    "start:dev": "frida -l agent/dev.js WeChat.exe",
     "start:inject": "frida -l examples/inject.js WeChat.exe"
   },
   "devDependencies": {
